--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+#DataSource Configuration for detecting entities from DB
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.user=DOSI
+spring.datasource.username=dosi
 spring.datasource.password=dosi
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+#Changement du Port
+server.port=8082
+
+
