--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DataSource Configuration for detecting entities from DB
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=dosi
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=DOSI
 spring.datasource.password=dosi
 
 spring.jpa.hibernate.ddl-auto=update
@@ -9,6 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 #Changement du Port
-server.port=8082
+#server.port=8082
 
 
