--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource Configuration for detecting entities from DB
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=DOSI
 spring.datasource.password=dosi
 
@@ -7,6 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-
 #Changement du Port
 server.port=8082
