--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource Configuration for detecting entities from DB
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 spring.datasource.username=DOSI
 spring.datasource.password=dosi
 
