--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #DataSource Configuration for detecting entities from DB
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=DOSI
 spring.datasource.password=dosi
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
